 2011-03-04 17:59  dimitr 
   M src/jrd/vio.cpp
The simplest possible fix for CORE-3374: Server may crash or corrupt data if SELECT WITH LOCK is issued against records not in the latest format. Thanks to Vlad.

 2011-02-22 12:21  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/btr.cpp
   M src/jrd/opt.cpp
Better solution for CORE-3355, as suggested by Vlad.

 2011-02-21 11:15  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/btr.cpp
   M src/jrd/btr_proto.h
   M src/jrd/opt.cpp
Fixed CORE-3355: Wrong comparison of DATE and TIMESTAMP if index is used.

 2011-02-18 06:26  dimitr 
   M src/jrd/evl.cpp
Fixed the main reason for CORE-3233: LIKE, STARTING and CONTAINING fail if second operand >= 32K. Thanks to Adriano.

 2011-02-18 01:21  robocop 
   M src/jrd/SysFunction.cpp
Make sure at least one operand is widened before the multiplication.

 2011-02-17 17:33  dimitr 
   M src/jrd/evl.cpp
Fixed inability to execute LIKE/STARTING/etc if the second argument is a small (<32KB) blob and the first one is a blob of charset NONE. This is partially related to CORE-3233, see my comment there.

 2011-02-17 07:38  dimitr 
   M src/dsql/pass1.cpp
Fixed CORE-3353: Predicate (blob_field LIKE ?) describes the parameter as VARCHAR(30) rather than as BLOB.
Also, let's never transfer the CS_dynamic pseudo-charset to the client side.

 2011-02-15 10:15  hvlad 
   M src/remote/inet.cpp
   M src/remote/xdr.h
Fixed bug CORE-3351 : Windows client could put 10054 error messages into firebird.log at connection time

 2011-02-15 08:40  dimitr 
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/DatabaseSnapshot.h
   M src/jrd/RecordBuffer.cpp
   M src/jrd/RecordBuffer.h
   M src/jrd/VirtualTable.cpp
Reworked my yesterday's fix to simplify it.

 2011-02-14 10:38  dimitr 
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/DatabaseSnapshot.h
   M src/jrd/VirtualTable.cpp
Fixed CORE-3138: Internal error or crash occurs when accessing any MON$ table after altering its structure.

 2011-02-04 08:41  dimitr 